// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShoppingListEntry renders correctly in edit mode 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "borderBottomColor": "#e0e0e0",
      "borderBottomWidth": 1,
      "opacity": 1,
      "padding": 16,
    }
  }
  testID="shopping-list-entry-1"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 4,
        "marginLeft": -12,
      }
    }
  >
    <TextInput
      autoFocus={true}
      onChangeText={[Function]}
      onSubmitEditing={[Function]}
      placeholder=""
      placeholderTextColor="#687076"
      showSoftInputOnFocus={true}
      style={
        [
          {
            "borderWidth": 1,
            "flex": 1,
            "height": 40,
            "margin": 12,
            "padding": 10,
            "top": 0,
          },
          {
            "borderColor": "#11181C",
            "color": "#11181C",
          },
        ]
      }
      testID="shopping-list-input-1"
      value="Default Shopping List"
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "opacity": 1,
          "padding": 4,
        }
      }
      testID="save-button-1"
    >
      <Text />
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "opacity": 1,
          "padding": 4,
        }
      }
      testID="cancel-button-1"
    >
      <Text />
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "opacity": 1,
          "padding": 4,
        }
      }
      testID="delete-button-1"
    >
      <Text />
    </View>
  </View>
</View>
`;

exports[`ShoppingListEntry renders correctly in non-edit mode 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "borderBottomColor": "#e0e0e0",
      "borderBottomWidth": 1,
      "opacity": 1,
      "padding": 16,
    }
  }
  testID="shopping-list-entry-1"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#11181C",
            },
            {
              "fontSize": 16,
              "lineHeight": 24,
            },
            undefined,
          ]
        }
      >
        Default Shopping List
      </Text>
      <Text
        style={
          [
            {
              "color": "#11181C",
            },
            {
              "fontSize": 16,
              "lineHeight": 24,
            },
            {
              "fontSize": 12,
              "marginTop": 4,
              "opacity": 0.6,
            },
          ]
        }
      >
        3/15/2023
      </Text>
    </View>
    <Text
      style={
        [
          {
            "color": "#11181C",
          },
          {
            "fontSize": 16,
            "lineHeight": 24,
          },
          {
            "fontSize": 16,
            "fontWeight": "600",
            "marginLeft": 12,
            "opacity": 0.7,
          },
        ]
      }
    >
      2
      /
      5
    </Text>
  </View>
  <View
    style={
      {
        "borderRadius": 2,
        "flexDirection": "row",
        "height": 4,
        "marginTop": 8,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#2196F3",
          },
          {
            "flex": 2,
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "backgroundColor": "#FF9800",
          },
          {
            "flex": 3,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`ShoppingListEntry renders correctly without counts 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "borderBottomColor": "#e0e0e0",
      "borderBottomWidth": 1,
      "opacity": 1,
      "padding": 16,
    }
  }
  testID="shopping-list-entry-1"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#11181C",
            },
            {
              "fontSize": 16,
              "lineHeight": 24,
            },
            undefined,
          ]
        }
      >
        Default Shopping List
      </Text>
      <Text
        style={
          [
            {
              "color": "#11181C",
            },
            {
              "fontSize": 16,
              "lineHeight": 24,
            },
            {
              "fontSize": 12,
              "marginTop": 4,
              "opacity": 0.6,
            },
          ]
        }
      >
        3/15/2023
      </Text>
    </View>
  </View>
</View>
`;
